@@ -21,10 +21,10 @@
  * questions.
  */
 
- // key: compiler.err.unnamed.class.does.not.have.main.method
- // key: compiler.note.preview.filename
- // key: compiler.note.preview.recompile
- // options: -source ${jdk.version} --enable-preview
 
-public void ordinaryMethod() {
+/**
+ * Exemplar implicit class.
+ */
+void main() {
+    System.out.println("Hello, world.");
 }
