@@ -21,10 +21,10 @@
  * questions.
  */
 
+ // key: compiler.err.implicit.class.does.not.have.main.method
+ // key: compiler.note.preview.filename
+ // key: compiler.note.preview.recompile
+ // options: -source ${jdk.version} --enable-preview
 
-/**
- * Exemplar unnamed class.
- */
-public void main() {
-    System.out.println("Hello, world.");
+public void ordinaryMethod() {
 }
